Adds a python server

--- a/docker-compose-gymbro/docker-compose.yml
+++ b/docker-compose-gymbro/docker-compose.yml
@@ -1,5 +1,8 @@
 version: 'latest'
 services:
+  python-server:
+    build: .
+  
   database-server:
     image: postgres:latest
     restart: always
