Prepare to send to pi

--- a/.test.env
+++ b/.test.env
@@ -1,5 +1,5 @@
-DB_HOST = 'localhost'
-DB_USER = 'test'
-DB_PASSWORD = 'test'
-DB_PORT = '5437'
-DB_NAME = 'test'
+POSTGRES_HOST = 'localhost'
+POSTGRES_DB = 'test'
+POSTGRES_PASSWORD = 'test'
+POSTGRES_PORT = '5437'
+POSTGRES_USER = 'test'
